--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -43,4 +43,7 @@
       </tr>
     </tbody>
   </table>
+  <div class="text-center my-3">
+   <%= link_to "注文情報入力に進む", new_order_path, class: "btn btn-primary btn-lg" %>
+  </div>
 </div>
