--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -12,14 +12,14 @@
     <div class="card-body">
       <h2 class="card-title"><%= @item.name %></h2>
       <p class="card-text"><strong>ジャンル:</strong> <%= @item.genre.name %></p>
-      <p class="card-text"><strong>価格:</strong> <%= number_to_currency(@item.price * 1.1, unit: "円", delimiter: ",", format: "%n%u", precision: 0) %></p>
+      <p class="card-text"><strong>価格:</strong> <%= number_to_currency(@item.price , unit: "円", delimiter: ",", format: "%n%u", precision: 0) %></p>
       <p class="card-text"><strong>在庫:</strong> <%= @item.is_active ? "販売中" : "売り切れ" %></p>
       <p class="card-text"><strong>商品説明</strong></p>
       <p class="card-text"><%= @item.introduction %></p>
 
       <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
        <%= f.hidden_field :item_id, value: @item.id %>
-       <%= f.select :amount, [1, 2, 3] %>
+       <%= f.select :amount, (1..10).to_a %>
        <%= f.submit 'カートに追加する', class: 'btn btn-primary' %>
       <% end %>
 
