--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,55 +1,55 @@
-<h1>顧客情報の編集</h1>
+<div class="container">
+  <h4 class="text-center mb-4">会員情報の編集</h4>
 
-<%= form_with(model: [:admin, @customer], local: true) do |form| %>
+  <%= form_with(model: [:admin, @customer], local: true, class: 'row g-3') do |form| %>
+    <div class="col-md-6">
+      <label for="last_name" class="form-label">姓</label>
+      <%= form.text_field :last_name, class: 'form-control', id: 'last_name' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :last_name, '姓' %>
-    <%= form.text_field :last_name, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="first_name" class="form-label">名</label>
+      <%= form.text_field :first_name, class: 'form-control', id: 'first_name' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :first_name, '名' %>
-    <%= form.text_field :first_name, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="last_name_kana" class="form-label">姓カナ</label>
+      <%= form.text_field :last_name_kana, class: 'form-control', id: 'last_name_kana' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :last_name_kana, '姓カナ' %>
-    <%= form.text_field :last_name_kana, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="first_name_kana" class="form-label">名カナ</label>
+      <%= form.text_field :first_name_kana, class: 'form-control', id: 'first_name_kana' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :first_name_kana, '名カナ' %>
-    <%= form.text_field :first_name_kana, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="email" class="form-label">メールアドレス</label>
+      <%= form.email_field :email, class: 'form-control', id: 'email' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :email, 'メールアドレス' %>
-    <%= form.email_field :email, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="postal_code" class="form-label">郵便番号</label>
+      <%= form.text_field :postal_code, class: 'form-control', id: 'postal_code' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :postal_code, '郵便番号' %>
-    <%= form.text_field :postal_code, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="address" class="form-label">住所</label>
+      <%= form.text_field :address, class: 'form-control', id: 'address' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :address, '住所' %>
-    <%= form.text_field :address, class: 'form-control' %>
-  </div>
+    <div class="col-md-6">
+      <label for="telephone_number" class="form-label">電話番号</label>
+      <%= form.text_field :telephone_number, class: 'form-control', id: 'telephone_number' %>
+    </div>
 
-  <div class="form-group">
-    <%= form.label :telephone_number, '電話番号' %>
-    <%= form.text_field :telephone_number, class: 'form-control' %>
-  </div>
+    <div class="p-4 text-center col-12">
+  <label for="is_deleted" class="form-label">会員ステータス</label>
+  <%= form.select :is_deleted, { '有効': false, '退会済み': true }, class: 'form-select', id: 'is_deleted' %>
+</div>
 
-  <div class="form-group">
-    <%= form.label :is_deleted, '会員ステータス' %>
-    <%= form.select :is_deleted, { '有効': false, '退会済み': true }, { include_blank: true }, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= form.submit '更新', class: 'btn btn-primary' %>
-  </div>
-<% end %>
-
-<%= link_to '戻る', admin_customer_path(@customer) %>
+<div class="p-3 text-center col-12">
+  <%= form.submit '更新', class: 'btn btn-primary' %>
+  <%= link_to '戻る', admin_customer_path(@customer), class: 'btn btn-secondary' %>
+</div>
+  <% end %>
+</div>
