--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,42 +12,51 @@
 
   <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light ">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <%= link_to "Nagano Cake", top_path, class: "navbar-brand" %>
+    <a class="navbar-brand" href="/">NaganoCake</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-  <li class="nav-item">
-    <%= link_to "商品一覧", items_path, class: "nav-link" %>
-  </li>
-  <% if customer_signed_in? %>
-    <li class="nav-item">
-      <%= link_to "マイページ", customers_my_page_path(current_customer), class: "nav-link" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to "カート", cart_items_path, class: "nav-link" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link", data: { confirm: "ログアウトしますか？" } %>
-    </li>
-  <% elsif admin_signed_in? %>
-    <li class="nav-item">
-      <%= link_to "商品管理画面", admin_items_path, class: "nav-link" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link", data: { confirm: "ログアウトしますか？" } %>
-    </li>
-  <% else %>
-    <li class="nav-item">
-      <%= link_to "ログイン", new_customer_session_path, class: "nav-link" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to "新規登録", new_customer_registration_path, class: "nav-link" %>
-    </li>
-  <% end %>
+        <% if customer_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "商品一覧", items_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "マイページ", customers_my_page_path(current_customer), class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "カート", cart_items_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "注文履歴", orders_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link", data: { confirm: "ログアウトしますか？" } %>
+          </li>
+        <% elsif admin_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "会員一覧", admin_customers_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "商品一覧", admin_items_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "注文履歴", home_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link", data: { confirm: "ログアウトしますか？" } %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "ログイン", new_customer_session_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "新規登録", new_customer_registration_path, class: "nav-link" %>
+          </li>
+        <% end %>
 </ul>
     </div>
   </div>
@@ -60,20 +69,21 @@
 
   <%= yield %>
 
-  <footer class="footer mt-4">
+  <footer class="footer mt-4 bg-light">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
         <% if admin_signed_in? %>
-          <%= link_to "管理画面", admin_items_path, class: "text-dark" %>
+          <%= link_to "administrator", admin_items_path, class: "text-dark" %>
         <% else %>
-          <%= link_to "管理画面にログイン", new_admin_session_path, class: "text-dark" %>
+          <%= link_to "administrator", new_admin_session_path, class: "text-dark" %>
         <% end %>
-        <p class="mt-2 mb-0">© 2023 Nagano Cake, All rights reserved.</p>
+        <p class="mt-2 mb-0 text-muted">© 2023 Nagano Cake, All rights reserved.</p>
       </div>
     </div>
   </div>
 </footer>
+
 
 
 
