--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,9 +1,11 @@
 <div class="table-responsive">
   <table class="table table-bordered table-sm col-sm-9 mx-auto">
     <thead>
+     <div class="text-right">
+      </div>
       <tr>
-        <th colspan="5">
-          <div class="text-left p-3">
+        <th colspan="4">
+          <div class="text-left p-2">
             <h4>ショッピングカート</h4>
           </div>
         </th>
@@ -13,7 +15,6 @@
         <th>単価(税込)</th>
         <th>数量</th>
         <th>小計</th>
-        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -28,7 +29,7 @@
             <%= number_field_tag "cart_item[amount]", cart_item.amount, min: 1, max: 99 %>
             <%= submit_tag "更新", class: "btn btn-primary btn-sm" %>
             <% end %>
-      </td>
+          </td>
           <td><%= number_to_currency(cart_item.item.price * 1.1 * cart_item.amount, unit: '', precision: 0, format: '%n円') %></td>
           <td>
             <%= button_to "削除", cart_item_path(cart_item), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger btn-sm" %>
@@ -37,13 +38,19 @@
         <% subtotal += cart_item.item.price * 1.1 * cart_item.amount %>
       <% end %>
       <tr>
-        <td colspan="3"></td>
-        <th>合計</th>
+        <th>合計数量</th>
+        <td><%= current_customer.cart_items.sum(:amount) %></td>
+        <th>合計金額</th>
         <td><%= number_to_currency(subtotal, unit: '', precision: 0, format: '%n円') %></td>
       </tr>
     </tbody>
   </table>
   <div class="text-center my-3">
-   <%= link_to "注文情報入力に進む", new_order_path, class: "btn btn-primary btn-lg" %>
-  </div>
+  <% if current_customer.cart_items.any? %>
+    <%= link_to "注文情報入力に進む", new_order_path, class: "btn btn-primary btn-lg mr-2" %>
+  <% else %>
+    <span class="btn btn-primary btn-lg mr-2 disabled">注文情報入力に進む</span>
+  <% end %>
+  <%= link_to "買い物を続ける", top_path, class: "btn btn-secondary btn-lg mr-2" %>
+  <%= link_to 'カートを空にする', delete_all_cart_items_path, method: :delete, data: { confirm: '本当にカートを空にしますか？' }, class: 'btn btn-danger' %>
 </div>
