--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -39,6 +39,7 @@
         </tr>
       </table>
       <%= link_to "登録情報編集", customers_information_edit_path, class: "btn btn-primary" %>
+      <%= link_to "注文履歴", orders_path, class: "btn btn-primary" %>
     </div>
   </div>
 </div>
