--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="my-4">商品一覧</h2>
+  <h3 class="my-4 text-center">商品一覧</h3>
   <div class="row">
     <% @items.each do |item| %>
       <div class="col-md-3 mb-3">
@@ -15,7 +15,7 @@
           <% end %>
           <div class="card-body">
             <h5 class="card-title"><%= item.name %></h5>
-            <p class="card-text"><%= item.price %>円</p>
+            <p class="card-text"><%= number_with_delimiter(item.price) %>円</p>
             <% if item.is_active %>
               <p class="text-success">販売中</p>
             <% else %>
